...
                        controller: scrollController,
                        child: Column(
                          crossAxisAlignment: CrossAxisAlignment.start,
                          children: [
                            Text(tv.name, style: heading5),
                            FilledButton(
                              key: Key('watchlist_button'),
                              onPressed: () {
                                final bloc = context.read<TVDetailBloc>();
                                if (!isAddedWatchlist) {
                                  bloc.add(AddTVToWatchlist(tv));
                                } else {
                                  bloc.add(RemoveTVFromWatchlist(tv));
...
                              ],
                            ),
                            SizedBox(height: 16),
                            Text('Overview', style: heading6),
                            Text(tv.overview),
                            SizedBox(height: 16),
                            Text('Seasons', style: heading6),
                            _SeasonList(tvId: tv.id, seasons: tv.seasons),
                            SizedBox(height: 16),
                            Text('Recommendations', style: heading6),
                            BlocBuilder<TVDetailBloc, TVDetailState>(
                              builder: (_, state) {
                                if (state.recommendationState ==
...
